--- a/app/app.scss
+++ b/app/app.scss
@@ -219,7 +219,7 @@ ul.downloads {
     border-bottom: 1px solid rgba(16, 50, 72, 0.55);
 }
 .plan.darker:hover {
-    color: #103248;
+    //color: #103248;
 }
 .plan.darker-bgcolor > .head {
     -webkit-transition: box-shadow 270ms ease-out;
@@ -278,10 +278,10 @@ ul.downloads {
     margin-bottom: 4px;
 }
 .plan:hover {
-    color: #236b9b;
+    //color: #236b9b;
 }
 .plan:hover > .head > h2 > .fa-star {
-    color: #eeb816;
+    //color: #eeb816;
 }
 .plan.default-bgcolor {
     color: #ffffff;
@@ -296,11 +296,11 @@ ul.downloads {
     border-bottom: 1px solid #2674a7;
 }
 .plan.default-bgcolor:hover {
-    color: #ffffff;
-    background-color: #2c88c5;
+    //color: #ffffff;
+    //background-color: #2c88c5;
 }
 .plan.default-bgcolor:hover > .head {
-    box-shadow: inset 0 -4px 0 0 #77b6e0;
+    //box-shadow: inset 0 -4px 0 0 #77b6e0;
 }
 @media screen and (max-width: 992px) {
     .plan > .price > h3 {
