--- a/app/views/bestellen.html
+++ b/app/views/bestellen.html
@@ -18,71 +18,76 @@
 
 <div class="row">
     <div class="panel-body">
+        
+        <div class="col-md-8 well" ng-if="orderSent">
+                <strong>Vielen Dank!</strong> Ihre Bestellung wurde gesendet.
+                <p>Zurück zum  <a href="" ng-click="resetOrder()">Bestellformular</a></p>
+                
+            </div>
 
-        <div class="col-sm-8">
+        <div class="col-sm-8" ng-if="!orderSent">
 <!--
             <ul class="nav nav-tabs">
                 <li role="presentation" class="active"><a href="#">Rechnungsadresse</a></li>
                 <li role="presentation"><a href="#">Liederadresse</a></li>
                 <li role="presentation"><a href="#">Bestellübersicht</a></li>
             </ul>-->
+            
+            
 
             <form ng-submit="submitOrder()">
                 <div class="well">
                     <div class="form-group">
-                        <label for="name">Firma</label>
+                        <label for="company">Firma</label>
                         <input type="email" class="form-control" id="compyany" name="company" ng-model="order.company">
                     </div>
-
+                    
                     <div class="form-group">
-                        <label for="name">UID</label>
+                        <label for="uid">UID</label>
                         <input type="email" class="form-control" id="uid" name="uid" ng-model="order.uid">
                     </div>
 
                 </div>
                 <div class="well">
-
+                    
                     <div class="form-group">
                         <label for="name">Name *</label>
-                        <input type="text" class="form-control" id="name" name="name" ng-model="order.name">
+                        <input type="text" class="form-control" id="name" name="name" required ng-model="order.name">
                     </div>
-
                     <div class="form-group">
-                        <label for="name">Ihr E-Mail-Adresse *</label>
-                        <input type="email" class="form-control" id="mail" ng-model="order.mail">
+                        <label for="mail">Ihr E-Mail-Adresse *</label>
+                        <input type="email" class="form-control" id="mail" name="mail" required ng-model="order.mail">
                     </div>
-
-
                     <div class="form-group">
                         <label for="name">Telefon *</label>
-                        <input type="email" class="form-control" id="mail" ng-model="order.tel">
+                        <input type="text" class="form-control" id="tel" ng-model="order.tel">
                     </div>
                 </div>
                 <div class="well">
                     <div class="form-group">
-                        <label for="name">Straße, Hausnummer *</label>
-                        <input type="email" class="form-control" id="mail" ng-model="order.street">
+                        <label for="street">Straße, Hausnummer *</label>
+                        <input type="text" class="form-control" id="street" name="street" ng-model="order.street">
                     </div>
 
                     <div class="row">
                         <div class="col-md-4">
                             <div class="form-group">
-                                <label for="name">Postleitzahl *</label>
-                                <input type="email" class="form-control" id="mail" ng-model="order.zip">
+                                <label for="zip">Postleitzahl *</label>
+                                <input type="text" class="form-control" id="zip" name="zip" ng-model="order.zip">
                             </div>
                         </div>
                         <div class="col-md-8">
 
                             <div class="form-group">
-                                <label for="name">Ort *</label>
-                                <input type="email" class="form-control" id="mail" ng-model="order.city">
+                                <label for="city">Ort *</label>
+                                <input type="text" class="form-control" id="city" name="city" ng-model="order.city">
                             </div>
                         </div>
                     </div>
 
                     <div class="form-group">
-                        <label for="name">Land</label>
-                        <select class="form-control"  ng-model="order.country">
+                        <label for="country">Land</label>
+                        <select class="form-control" name="country" id="country" ng-model="order.country">
                             <option selected>Deutschland</option>
                             <option>Österreich</option>
                             <option>Schweiz</option>
@@ -93,38 +98,36 @@
                 <div class="well">
 
                     <div class="form-group">
-                        <label for="name">Menge</label>
-
+                        <label for="amount">Menge</label>
                         <div class="input-group">
-                            <input type="number" class="form-control" id="subject" value="10"  ng-model="order.amount">
+                            <input type="number" class="form-control" id="amount" name="amount" value="10" ng-model="order.amount">
                             <div class="input-group-addon">Kanister</div>
                         </div>
                     </div>
-
-
+                    
                     <div class="form-group">
-                        <label for="name">Bemerkung</label>
-                        <textarea class="form-control" rows="10"  ng-model="order.remark"></textarea>
+                        <label for="remark">Bemerkung</label>
+                        <textarea class="form-control" rows="10"  id="remark" name="remark" ng-model="order.remark"></textarea>
                     </div>
                 </div>
                 <div class="well well-lg order">
                     <a href="" class="btn btn-sm uppercase" ng-click="submitOrder()">Bestellung absenden</a>
                 </div>
 
-                <button type="submit" class="btn btn-default" ng-hide="true">Bestellen</button>
+                <!--<button type="submit" class="btn btn-default" ng-hide="true">Bestellen</button>-->
             </form>
         </div>
 
         <div class="col-sm-4">
-            <div class="well well-lg order hidden-sm hidden-xs">
+            <div class="well well-lg order hidden-sm hidden-xs" ng-if="!orderSent">
                 <a href="" class="btn btn-sm uppercase" ng-click="submitOrder()">Bestellung absenden</a>
             </div>
 
             <div class="plan darker-bgcolor">
                 <div class="head">
-                    <h2><span class="mw-headline" id="Head_Title"><i class="fa fa-wrench"></i> Lexin</span></h2>
+                    <!--<h2><span class="mw-headline" id="Head_Title"><i class="fa fa-wrench"></i> Lexin</span></h2>-->
                     <img src="assets/img/etikette.png" />
-                    <br> Entspricht der Ausbringung auf 40<abbr title="Hektar">ha</abbr> aufwärts bei einer Anwendung von empfohlenen 0,25l/ha
+                    <br><br>Entspricht der Ausbringung auf 40<abbr title="Hektar">ha</abbr> aufwärts bei einer Anwendung von empfohlenen 0,25l/ha
                 </div>
                 <ul class="item-list list-unstyled">
                     <li>67,8 € pro Liter</li>
