--- a/app/views/downloads/downloads.html
+++ b/app/views/downloads/downloads.html
@@ -14,60 +14,40 @@
             <br> Eine Übersicht über freie PDF-Betrachter finden Sie zum Beispiel <a href="http://pdfreaders.org/">hier</a>.</div>
 
         <ul class="downloads">
-            
-            
+
+
             <li>
-                <div class="row">
-                    <div class="col-md-12">
-                        <a href="http://gb-tec.at/lexin/wp-content/uploads/2015/09/Ergebnisse-der-Erprobung-zukunftsträchtiger-Stimulatoren-bei-Sojabohne_DE.pdf">
+                <a href="assets/docs/Ergebnisse-der-Erprobung-zukunftsträchtiger-Stimulatoren-bei-Sojabohne_DE.pdf">
                     Versuchsergebnisse bei ausgewählten Stimulatoren im Hopfenbau
                 </a>
-
-                    </div>
-
-                </div>
             </li>
 
             <li>
-                <div class="row">
-                    <div class="col-md-12">
-                        <a href="http://gb-tec.at/lexin/wp-content/uploads/2015/09/Ergebnisse-der-Erprobung-zukunftsträchtiger-Stimulatoren-bei-Sojabohne_DE.pdf">
+                <a href="assets/docs/Ergebnisse-der-Erprobung-zukunftsträchtiger-Stimulatoren-bei-Sojabohne_DE.pdf">
                     Ergebnisse der Erprobung zukunftsträchtiger Stimulatoren bei Sojabohne
                 </a>
-
-                    </div>
-
-                </div>
             </li>
             <li>
                 <div class="row">
                     <div class="col-md-6">
-                        <a href="http://gb-tec.at/lexin/wp-content/uploads/2015/08/Lexin-Info-Broschüre-A4b_DE.pdf">
+                        <a href="assets/docs/Lexin-Info-Broschüre-A4b_DE.pdf">
                     Lexin Info-Broschüre
-                </a><br><br>
+                </a>
+                        <br>
+                        <br>
                         <p class="well">Die Broschüre informiert in allgemein verständlicher, knapper und anschaulicher Form über die Wirkung von Lexin.</p>
                     </div>
 
-
                     <div class="col-md-6 text-right">
-
-                        <img src="assets/img/folder-300x212.jpg" alt="folder">
-
+                        <img src="assets/img/folder-300x212.jpg" alt="Lexin Info-Broschüre">
                     </div>
                 </div>
             </li>
 
             <li>
-                <div class="row">
-                    <div class="col-md-12">
-                        <a href="http://gb-tec.at/lexin/wp-content/uploads/2015/08/Lexin-Info-Broschüre-A4b_DE.pdf">
+                 <a href="assets/docs/Lexin-Info-Broschüre-A4b_DE.pdf">
                     Meldung gemäß §16 Düngemittelgesetz 1994
                 </a>
-
-                    </div>
-
-
-                </div>
             </li>
 
         </ul>
