--- a/app/views/bestellen.html
+++ b/app/views/bestellen.html
@@ -51,35 +51,35 @@
                 <div class="well">
                     
                     <div class="form-group">
-                        <label for="name">Name *</label>
+                        <label for="name">Name</label>
                         <input type="text" class="form-control" id="name" name="name" required ng-model="order.name">
                     </div>
                     <div class="form-group">
-                        <label for="mail">Ihr E-Mail-Adresse *</label>
+                        <label for="mail">Ihr E-Mail-Adresse</label>
                         <input type="email" class="form-control" id="mail" name="mail" required ng-model="order.mail">
                     </div>
                     <div class="form-group">
-                        <label for="name">Telefon *</label>
+                        <label for="name">Telefon</label>
                         <input type="text" class="form-control" id="tel" ng-model="order.tel">
                     </div>
                 </div>
                 <div class="well">
                     <div class="form-group">
-                        <label for="street">Straße, Hausnummer *</label>
+                        <label for="street">Straße, Hausnummer</label>
                         <input type="text" class="form-control" id="street" name="street" ng-model="order.street">
                     </div>
 
                     <div class="row">
                         <div class="col-md-4">
                             <div class="form-group">
-                                <label for="zip">Postleitzahl *</label>
+                                <label for="zip">Postleitzahl</label>
                                 <input type="text" class="form-control" id="zip" name="zip" ng-model="order.zip">
                             </div>
                         </div>
                         <div class="col-md-8">
 
                             <div class="form-group">
-                                <label for="city">Ort *</label>
+                                <label for="city">Ort</label>
                                 <input type="text" class="form-control" id="city" name="city" ng-model="order.city">
                             </div>
                         </div>
@@ -132,8 +132,6 @@
                 <ul class="item-list list-unstyled">
                     <li>67,8 € pro Liter</li>
                     <li>1 Kanister = 10 L = 40 ha</li>
-
-
                     <li>678 € / Kanister = 16,95 € / ha</li>
                 </ul>
                 <div class="price">
