--- a/app/views/sidebar.html
+++ b/app/views/sidebar.html
@@ -28,7 +28,7 @@
     <h2>Informationsmaterial</h2>
     <ul>
         <li>
-            <a href="http://gb-tec.at/lexin/wp-content/uploads/2015/08/Lexin-Info-Brosch%C3%BCre-A4b_DE.pdf">Lexin<sup>&copy;</sup> Informations-Broschüre</a>
+            <a href="assets/docs/Lexin-Info-Broschüre-A4b_DE.pdf">Lexin<sup>&copy;</sup> Informations-Broschüre</a>
         </li>
     </ul>
 </div>
