--- a/app/views/downloads/downloads.html
+++ b/app/views/downloads/downloads.html
@@ -31,8 +31,8 @@
                 <div class="row">
                     <div class="col-md-6">
                         <a href="assets/docs/Lexin-Info-Broschüre-A4b_DE.pdf">
-                    Lexin Info-Broschüre
-                </a>
+                            Lexin<sup>&copy;</sup> Informations-Broschüre
+                        </a>
                         <br>
                         <br>
                         <p class="well">Die Broschüre informiert in allgemein verständlicher, knapper und anschaulicher Form über die Wirkung von Lexin.</p>
