--- a/app/views/kontakt/kontakt.html
+++ b/app/views/kontakt/kontakt.html
@@ -22,12 +22,12 @@
             <div class="col-md-6 well" ng-if="!messageSent">
                 <form ng-submit="submitContactForm($event)">
                     <div class="form-group">
-                        <label for="name">Ihr Name</label>
+                        <label for="name">Name</label>
                         <input type="text" class="form-control" id="name" name="name" placeholder="Name" required ng-model="contact.name">
                     </div>
 
                     <div class="form-group">
-                        <label for="mail">Ihr E-Mail-Adresse</label>
+                        <label for="mail">E-Mail-Adresse</label>
                         <input type="email" class="form-control" id="mail" name="mail" placeholder="E-Mail-Adresse" required ng-model="contact.email">
                     </div>
 
@@ -38,7 +38,7 @@
 
                     <div class="form-group">
                         <label for="message">Nachricht</label>
-                        <textarea class="form-control" rows="10" id="message" name="message" required ng-model="contact.message"></textarea>
+                        <textarea class="form-control" rows="10" id="message" name="message" placeholder="Nachricht" required ng-model="contact.message"></textarea>
                     </div>
 
                     <button type="submit" class="btn btn-default">Senden</button>
