content updates - dosierung

--- a/app/views/dosierung/dosierung.html
+++ b/app/views/dosierung/dosierung.html
@@ -13,10 +13,11 @@
             <li>
                 <div class="row">
                     <div class="col-md-6">
-                        <a href="assets/img/Lexin-Info-Brosch%C3%BCre-A4b_DE-3.png">Titel des Bildes</a>
+                        <a href="assets/img/Lexin-Info-Brosch%C3%BCre-A4b_DE-3.png">Anwendung</a>
                         <br>
                         <br>
-                        <p class="well">Kurze Beschreibung zum Bild.</p>
+                        <p class="well">Hier sind die Vorteile der Anwendung in den verschiedenen Phasen der verschiedenen Feldfrüchte aufgelistet.<br>
+                            In dieser Tabelle ist in Punkten aufgelistet, <a href="assets/img/Lexin-Info-Brosch%C3%BCre-A4b_DE-3.png">welche positiven Entwicklungen Lexin verstärkt</a> in den verschiedenen Phasen der Entwicklung und wie Lexin die Qualität des Ernteguts positiv beeinflusst.</p>
                     </div>
                     <div class="col-md-6 text-right">
                         <a href="assets/img/Lexin-Info-Brosch%C3%BCre-A4b_DE-3.png">
@@ -28,10 +29,13 @@
             <li>
                 <div class="row">
                     <div class="col-md-6">
-                        <a href="assets/img/Lexin-Info-Brosch%C3%BCre-A4b_DE-4.jpg">Titel des Bildes</a>
+                        <a href="assets/img/Lexin-Info-Brosch%C3%BCre-A4b_DE-4.jpg">Applikations- und Dosierungempfehlung</a>
                         <br>
                         <br>
-                        <p class="well">Kurze Beschreibung zum Bild.</p>
+                        <p class="well">In dieser Auflistung finden Sie die empfohlenen Applikationstermine, sowie die Dosierung von Lexin für die verschiedenen Feldfrüchte.
+Die angegebene Dosierung ist die optimale Anwendungsmenge und es ist empfohlen diese nicht zu über- oder unterschreiten. Die Wassermenge in Klammer ist auf den Durchschnitt der bisherigen Anwender abgestimmt und kann nach Belieben verändert werden, wobei ein Minimum an 100l nicht unterschritten werden sollte.<br>
+                            Die Applikationsmenge und -termine sind Empfehlungen basierend auf den lokalen Bedingungen und unterschiedlichen Saatgütern sind Applikationsmenge und -termine dementsprechend anzupassen. In Stresssituationen kann Lexin zusätzlich ausgebracht werden um die Vitalität der Pflanzen zu erhöhen und somit eine schnellere Regeneration ermöglichen.
+                        </p>
                     </div>
                     <div class="col-md-6 text-right">
                         <a href="assets/img/Lexin-Info-Brosch%C3%BCre-A4b_DE-4.jpg">
